# Cloud-PE-Chatroom

./: NOTICE  README.md  REFACTOR_NOTES.md
backend/: Cargo.toml  NOTICE
backend/src/: handlers.rs  main.rs  models.rs  websocket.rs
frontend/: NOTICE  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminRoute.tsx  ProtectedRoute.tsx
frontend/src/components/console/: PendingUsers.tsx  Settings.tsx  UserManagement.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  combobox.tsx  sidebar.tsx  spinner.tsx  toast.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/pages/: Chat.css  Chat.tsx  Console.css  Console.tsx  Login.css  Login.tsx
